# kde_color

./: Cargo.toml  README.md
src/: connections.rs  helpers.rs  lib.rs  main.rs
src/connections/: alacritty.rs  starship.rs
src/connections/alacritty/: schema.rs
