[package]
name = "kde_color"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
palette = "0.7.2"
serde = { version = "1.0.180", features = ["serde_derive", "derive"] }
serde_yaml = "0.9.25"
thiserror = "1.0.44"
toml_edit = "0.19.14"
